--- a/styles.css
+++ b/styles.css
@@ -68,14 +68,12 @@ p, li {
   font-size: 2.5rem;
   border: none;
   background-color: inherit;
-  padding-left: 0;
-
+  padding: 0;
+  margin-left: 30px;
 }
-#guitar {
-  position: absolute;
-  left: 0;
-  width: 300px;
-  top: 100px;
+
+.list-group-item p {
+  margin: 0;
 }
 
 #game-description, #ost, #dev-team {
@@ -116,4 +114,8 @@ footer {
 
 #nav-icon {
   max-width: 80px;
+}
+
+#created-by-header {
+  margin-top: 30px;
 }
